# web-rendering-benchmark

./: .gitattributes  .gitignore  Cargo.toml  index.html
3d-simulation/: index.html
3d-simulation/threejs-cannon/: index.html
3d-simulation/threejs-rapier/: index.html
particle-simulation/: demo-style.css  index.html  physics-constants.js
particle-simulation/rust-wasm-canvas2d/: index.html
particle-simulation/rust-wasm-canvas2d-100k/: index.html
particle-simulation/rust-wasm-canvas2d-500k/: index.html
particle-simulation/rust-wasm-webgl/: index.html
particle-simulation/rust-wasm-webgl-100k/: index.html  pkg
particle-simulation/rust-wasm-webgl-500k/: index.html
particle-simulation/typescript-canvas/: index.html
particle-simulation/typescript-canvas-100k/: index.html
particle-simulation/typescript-canvas-500k/: index.html
particle-simulation/typescript-svg/: index.html
particle-simulation/typescript-svg-100k/: index.html
particle-simulation/typescript-svg-500k/: index.html
particle-simulation/typescript-webgl/: index.html
particle-simulation/typescript-webgl-100k/: index.html
particle-simulation/typescript-webgl-500k/: index.html
src/: canvas2d.rs  lib.rs
